--- a/dots/.config/hypr/hyprland/execs.conf
+++ b/dots/.config/hypr/hyprland/execs.conf
@@ -3,6 +3,9 @@ exec-once = ~/.config/hypr/hyprland/scripts/start_geoclue_agent.sh
 exec-once = qs -c $qsConfig &
 exec-once = ~/.config/hypr/custom/scripts/__restore_video_wallpaper.sh
 
+# Input method
+exec-once = ~/apps/kanata-tray-linux
+
 # Core components (authentication, lock screen, notification daemon)
 exec-once = gnome-keyring-daemon --start --components=secrets
 exec-once = hypridle
