--- a/dots/.config/starship.toml
+++ b/dots/.config/starship.toml
@@ -1,100 +1,170 @@
-# Don't print a new line at the start of the prompt
-add_newline = false
-# Pipes ╰─ ╭─
-# Powerline symbols                                     
-# Wedges 🭧🭒 🭣🭧🭓
-# Random noise 🬖🬥🬔🬗
-# Cool stuff 󰜥   
+# Get editor completions based on the config schema
+"$schema" = 'https://starship.rs/config-schema.json'
+add_newline = true
+# Sets user-defined palette
+# Palettes must be defined _after_ this line
+palette = "rose-pine"
 
-# format = """
-# $cmd_duration$username$hostname $directory $git_branch
-# $character
-# """
 format = """
-$cmd_duration 󰜥 $directory $git_branch
-$character"""
-
-# Replace the "❯" symbol in the prompt with "➜"
-[character]                            # The name of the module we are configuring is "character"
-success_symbol = "[   ](bold fg:blue)"
-error_symbol = "[   ](bold fg:red)"
-
-# Disable the package module, hiding it from the prompt completely
-[package]
-disabled = true
+$directory\
+$git_branch\
+$git_status\
+$c\
+$elixir\
+$elm\
+$golang\
+$haskell\
+$java\
+$julia\
+$nodejs\
+$nim\
+$rust\
+$scala\
+$conda\
+$python\
+$lua\n\
+$character\
+"""
+# Starship modules
+[character]
+success_symbol = "[ ❯](iris)"
+error_symbol = "[ ❯](love)"
+vimcmd_symbol = "[ ❮](subtle)" # For use with zsh-vi-mode
 
 [git_branch]
-style = "bg: cyan"
-symbol = "󰘬"
-truncation_length = 12
-truncation_symbol = ""
-format = "󰜥 [](bold fg:cyan)[$symbol $branch(:$remote_branch)](fg:black bg:cyan)[ ](bold fg:cyan)"
+style = "bold foam"
+symbol = " "
 
-[git_commit]
-commit_hash_length = 4
-tag_symbol = " "
-
-[git_state]
-format = '[\($state( $progress_current of $progress_total)\)]($style) '
-cherry_pick = "[🍒 PICKING](bold red)"
+[fill]
+style = "fg:overlay"
+symbol = " "
 
 [git_status]
-conflicted = " 🏳 "
-ahead = " 🏎💨 "
-behind = " 😰 "
-diverged = " 😵 "
-untracked = " 🤷 ‍"
-stashed = " 📦 "
-modified = " 📝 "
-staged = '[++\($count\)](green)'
-renamed = " ✍️ "
-deleted = " 🗑 "
-
-[hostname]
-ssh_only = false
-format =  "[•$hostname](bg:cyan bold fg:black)[](bold fg:cyan)"
-trim_at = ".companyname.com"
 disabled = false
-
-[line_break]
-disabled = false
-
-[memory_usage]
-disabled = true
-threshold = -1
-symbol = " "
-style = "bold dimmed green"
-
-[time]
-disabled = true
-format = '🕙[\[ $time \]]($style) '
-time_format = "%T"
-
-[username]
-style_user = "bold bg:cyan fg:black"
-style_root = "red bold"
-format = "[](bold fg:cyan)[$user]($style)"
-disabled = false
-show_always = true
+style = "fg:love"
+format = '(fg:overlay)([$all_status$ahead_behind]($style))(fg:overlay) '
+up_to_date = '[ ✓ ](fg:iris)'
+untracked = '[?\($count\)](fg:gold)'
+stashed = '[\$](fg:iris)'
+modified = '[!\($count\)](fg:gold)'
+renamed = '[»\($count\)]fg:iris)'
+deleted = '[✘\($count\)](style)'
+staged = '[++\($count\)](fg:gold)'
+ahead = '[⇡\(${count}\)](fg:foam)'
+diverged = '⇕[\[](fg:iris)[⇡\(${ahead_count}\)](fg:foam)[⇣\(${behind_count}\)](fg:rose)[\]](fg:iris)'
+behind = '[⇣\(${count}\)](fg:rose)'
 
 [directory]
-home_symbol = "  "
-read_only = "  "
-style = "bg:green fg:black"
-truncation_length = 6
-truncation_symbol = " ••/"
-format = '[](bold fg:green)[󰉋 $path]($style)[](bold fg:green)'
-
+format = "[$path ]($style)"
+style = "bold fg:pine"
+truncation_length = 3
+truncation_symbol = "…/"
 
 [directory.substitutions]
-"Desktop" = "  "
-"Documents" = "  "
-"Downloads" = "  "
-"Music" = " 󰎈 "
-"Pictures" = "  "
-"Videos" = "  "
-"GitHub" = " 󰊤 "
+Documents = "󰈙"
+Downloads = " "
+Music = " "
+Pictures = " "
 
-[cmd_duration]
-min_time = 0
-format = '[](bold fg:yellow)[󰪢 $duration](bold bg:yellow fg:black)[](bold fg:yellow)'
+# Palette definitions
+[palettes.rose-pine]
+base = "#191724"
+surface = "#1f1d2e"
+overlay = "#26233a"
+muted = "#6e6a86"
+subtle = "#908caa"
+text = "#e0def4"
+love = "#eb6f92"
+gold = "#f6c177"
+rose = "#ebbcba"
+pine = "#31748f"
+foam = "#9ccfd8"
+iris = "#c4a7e7"
+# highlight low = "#2
+# highlight med = "#403d52"
+# highlight high = "#524f67"
+
+# Languages
+[c]
+style = "fg:pine"
+format = "[$symbol$version]($style) "
+disabled = false
+symbol = " "
+
+[elixir]
+style = "fg:pine"
+format = "[$symbol$version]($style) "
+disabled = false
+symbol = " "
+
+[elm]
+style = "fg:pine"
+format = "[$symbol$version]($style) "
+disabled = false
+symbol = " "
+
+[golang]
+style = "fg:pine"
+format = "[$symbol$version]($style) "
+disabled = false
+symbol = " "
+
+[haskell]
+style = "fg:pine"
+format = "[$symbol$version]($style) "
+disabled = false
+symbol = " "
+
+[java]
+style = "fg:pine"
+format = "[$symbol$version]($style) "
+disabled = false
+symbol = " "
+
+[julia]
+style = "fg:pine"
+format = "[$symbol$version]($style) "
+disabled = false
+symbol = " "
+
+[nodejs]
+style = "fg:pine"
+format = "[$symbol$version]($style) "
+disabled = false
+symbol = "󰎙 "
+
+[nim]
+style = "fg:pine"
+format = "[$symbol$version]($style) "
+disabled = false
+symbol = "󰆥 "
+
+[rust]
+style = "fg:pine"
+format = "[$symbol$version]($style) "
+disabled = false
+symbol = ""
+
+[scala]
+style = "fg:pine"
+format = "[$symbol$version]($style) "
+disabled = false
+symbol = " "
+
+[python]
+style = "fg:pine"
+format = "[$symbol$version]($style) "
+disabled = false
+symbol = ' '
+
+[conda]
+style = "fg:pine"
+format = "[$symbol$environment]($style) "
+disabled = false
+symbol = '🅒 '
+
+[lua]
+style = "fg:pine"
+format = "[$symbol$version]($style) "
+disabled = false
+symbol = '󰢱 '
