Adding more of my config

--- a/dots/.config/hypr/hyprland/execs.conf
+++ b/dots/.config/hypr/hyprland/execs.conf
@@ -4,7 +4,7 @@ exec-once = qs -c $qsConfig &
 exec-once = ~/.config/hypr/custom/scripts/__restore_video_wallpaper.sh
 
 # Input method
-exec-once = ~/apps/kanata-tray-linux
+exec-once = ~/apps/kanata-tray-linux &
 
 # Core components (authentication, lock screen, notification daemon)
 exec-once = gnome-keyring-daemon --start --components=secrets
@@ -22,6 +22,9 @@ exec-once = wl-paste --type image --watch bash -c 'cliphist store && qs -c $qsCo
 
 # Cursor
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
+
+# Pyprland
+exec-once = pypr &
 
 # Fix dock pinned apps not launching properly (https://github.com/end-4/dots-hyprland/issues/2200)
 # This causes https://github.com/end-4/dots-hyprland/issues/2427
