--- a/dots/.config/hypr/hyprland/rules.conf
+++ b/dots/.config/hypr/hyprland/rules.conf
@@ -1,5 +1,56 @@
 # ######## Window rules ########
 
+# windowrule - tags - add apps under appropriate tag to use the same settings
+# browser tags
+windowrule = tag +browser, class:^([Ff]irefox|org.mozilla.firefox|[Ff]irefox-esr|[Ff]irefox-bin)$
+windowrule = tag +browser, class:^([Tt]horium-browser|[Cc]achy-browser)$
+windowrule = tag +browser, class:^(zen-alpha|zen)$
+
+# terminal tags
+windowrule = tag +terminal, class:^(org.wezfurlong.wezterm|Alacritty|kitty|kitty-dropterm)$
+
+# spotify tags
+windowrule = tag +spotify, class:^([Ss]potify)$
+
+# project tags
+windowrule = tag +projects, class:^(codium|codium-url-handler|VSCodium)$
+windowrule = tag +projects, class:^(VSCode|code-url-handler)$
+windowrule = tag +projects, class:^(jetbrains-.+)$ # JetBrains IDEs
+
+# IM tags
+windowrule = tag +im, class:^([Dd]iscord|[Ww]ebCord|[Vv]esktop)$
+windowrule = tag +im, class:^([Ww]hatsapp-for-linux)$
+windowrule = tag +im, class:^(org.telegram.desktop|io.github.tdesktop_x64.TDesktop)$
+
+# file-manager tags
+windowrule = tag +file-manager, class:^([Tt]hunar|org.gnome.Nautilus|[Pp]cmanfm-qt)$
+windowrule = tag +file-manager, class:^(org.kde.dolphin)$
+
+# multimedia-video tags
+windowrule = tag +multimedia_video, class:^([Mm]pv|vlc)$
+
+# windowrule move to workspace
+windowrule = workspace 1, tag:browser*
+# windowrule = workspace 2, tag:terminal*
+windowrule = workspace 3, tag:projects*
+windowrule = workspace 6, tag:im*
+windowrule = workspace 7, tag:file-manager*
+windowrule = workspace 8, tag:multimedia_video*
+
+# OPACITY
+# windowrule = opacity 0.9 0.7, tag:browser*
+# windowrule = opacity 0.9 0.8, tag:terminal*
+windowrule = opacity 0.9 0.8, tag:projects*
+windowrule = opacity 0.8 0.8, tag:spotify*
+windowrule = opacity 0.9 0.86, tag:im*
+windowrule = opacity 0.9 0.8, tag:file-manager*
+windowrule = opacity 0.94 0.86, tag:multimedia*
+windowrule = opacity 0.95 0.75, title:^(Picture-in-Picture)$
+
+
+# Uncomment to apply global transparency to all windows:
+# windowrulev2 = opacity 0.89 override 0.89 override, class:.*
+
 # Disable blur for xwayland context menus
 windowrule = match:class ^()$, match:title ^()$, no_blur on
 
