--- a/dots/.config/hypr/hyprland/keybinds.conf
+++ b/dots/.config/hypr/hyprland/keybinds.conf
@@ -76,14 +76,11 @@ bindl = ,Print,exec,grim - | wl-copy # Screenshot >> clipboard
 bindln = Ctrl,Print, exec, mkdir -p $(xdg-user-dir PICTURES)/Screenshots && grim $(xdg-user-dir PICTURES)/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png # Screenshot >> clipboard & file (file)
 bindln = Ctrl,Print,exec,grim - | wl-copy # [hidden] Screenshot >> clipboard & file (clipboard)
 # Recording stuff
-bindl = Super+Shift, R, global, quickshell:regionRecord # Record region (no sound)
-bindl = Super+Shift, R, exec, qs -c $qsConfig ipc call TEST_ALIVE || ~/.config/quickshell/$qsConfig/scripts/videos/record.sh # [hidden] Record region (no sound) (fallback)
-bindl = Super+Alt, R, global, quickshell:regionRecord # [hidden] Record region (no sound)
-bindl = Super+Alt, R, exec, qs -c $qsConfig ipc call TEST_ALIVE || ~/.config/quickshell/$qsConfig/scripts/videos/record.sh # [hidden] Record region (no sound) (fallback)
-bindl = Ctrl+Alt, R, exec, ~/.config/quickshell/$qsConfig/scripts/videos/record.sh --fullscreen # [hidden] Record screen (no sound)
-bindl = Super+Shift+Alt, R, exec, ~/.config/quickshell/$qsConfig/scripts/videos/record.sh --fullscreen --sound # Record screen (with sound)
+bindl = Super+Alt, R, exec, ~/.config/hypr/hyprland/scripts/record.sh # Record region (no sound)
+bindl = Ctrl+Alt, R, exec, ~/.config/hypr/hyprland/scripts/record.sh --fullscreen # [hidden] Record screen (no sound)
+bindl = Super+Shift+Alt, R, exec, ~/.config/hypr/hyprland/scripts/record.sh --fullscreen-sound # Record screen (with sound)
 # AI
-bindd = Super+Shift+Alt, mouse:273, Generate AI summary for selected text, exec, ~/.config/hypr/hyprland/scripts/ai/primary-buffer-query.sh # [hidden] AI summary for selected text
+bindd = Super+Shift+Alt, mouse:273, Generate AI summary for selected text, exec, ~/.config/hypr/hyprland/scripts/ai/primary-buffer-query.sh # AI summary for selected text
 
 #!
 ##! Window
@@ -272,28 +269,45 @@ binde = Super, code:82, exec, qs -c $qsConfig ipc call TEST_ALIVE || ~/.config/h
 binde = Super, code:86, exec, qs -c $qsConfig ipc call TEST_ALIVE || ~/.config/hypr/hyprland/scripts/zoom.sh increase 0.1 # [hidden] Zoom in
 
 ##! Media
-bindl= Super+Shift, N, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"` # Next track
+#/# bind = Super, →,, # Next track
+bindl= Super, right, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"` # [hidden]
 bindl= ,XF86AudioNext, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"` # [hidden]
 bindl= ,XF86AudioPrev, exec, playerctl previous # [hidden]
 bind = Super+Shift+Alt, mouse:275, exec, playerctl previous # [hidden]
 bind = Super+Shift+Alt, mouse:276, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"` # [hidden]
-bindl= Super+Shift, B, exec, playerctl previous # Previous track
-bindl= Super+Shift, P, exec, playerctl play-pause # Play/pause media
+#/# bind = Super, ←,, # Previous track
+bindl= Super, left, exec, playerctl previous # [hidden]
+bindl= Super+Shift+Ctrl, P, exec, playerctl play-pause # Play/pause media
 bindl= ,XF86AudioPlay, exec, playerctl play-pause # [hidden]
 bindl= ,XF86AudioPause, exec, playerctl play-pause # [hidden]
+#/# bind = Super, ↑,, # Increase spotify volume
+bindel = Super, up, exec, sh -c 'if playerctl -l | grep -q spotify_player; then /home/vimdiesel/.cargo/bin/spotify_player playback volume --offset 5; else playerctl --player=spotify volume $(echo "$(playerctl --player=spotify volume)+0.05" | bc); fi' # [hidden]
+#/# bind = Super, ↓,, # Decrease spotify volume
+bindel = Super, down, exec, sh -c 'if playerctl -l | grep -q spotify_player; then /home/vimdiesel/.cargo/bin/spotify_player playback volume --offset -- -5; else playerctl --player=spotify volume $(echo "$(playerctl --player=spotify volume)-0.05" | bc); fi' # [hidden]
 
 ##! Apps
 bind = Super, Return, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "${TERMINAL}" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # Terminal
 # bind = Super, T, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh  "${TERMINAL}" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # [hidden] (terminal) (alt)
 # bind = Ctrl+Alt, T, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "${TERMINAL}" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # [hidden] (terminal) (for Ubuntu people)
-bind = Super, E, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "dolphin" "nautilus" "nemo" "thunar" "${TERMINAL}" "kitty -1 fish -c yazi" # File manager
-bind = Super, B, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "google-chrome-stable" "zen-browser" "firefox" "brave" "chromium" "microsoft-edge-stable" "opera" "librewolf" # Browser
+bind = Super, E, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "dolphin" "nautilus" "nemo" "thunar" "${TERMINAL}" "kitty -1 fish -c yazi" # [hidden]
+# bind = Super, B, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "google-chrome-stable" "zen-browser" "firefox" "brave" "chromium" "microsoft-edge-stable" "opera" "librewolf" # Browser
 # bind = Super, C, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "code" "codium" "cursor" "zed" "zedit" "zeditor" "kate" "gnome-text-editor" "emacs" "command -v nvim && kitty -1 nvim" "command -v micro && kitty -1 micro" # Code editor
 bind = Ctrl+Super+Shift+Alt, W, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "wps" "onlyoffice-desktopeditors" "libreoffice" # Office software
 # bind = Super, X, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "kate" "gnome-text-editor" "emacs" # Text editor
 bind = Ctrl+Super, V, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "pavucontrol-qt" "pavucontrol" # Volume mixer
 bind = Super, I, exec, XDG_CURRENT_DESKTOP=gnome ~/.config/hypr/hyprland/scripts/launch_first_available.sh "qs -p ~/.config/quickshell/$qsConfig/settings.qml" "systemsettings" "gnome-control-center" "better-control" # Settings app
 bind = Ctrl+Shift, Escape, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "gnome-system-monitor" "plasma-systemmonitor --page-name Processes" "command -v btop && kitty -1 fish -c btop" # Task manager
+#/# bind = Hold_Space, W,, # WezTerm(p)
+bind = Alt+SHIFT+CTRL, W, exec, export WEZTERM_WORKSPACE=Home_P && wezterm start --always-new-process # [hidden]
+#/# bind = Hold_Space, B,, # Browser
+bind = Alt+SHIFT+CTRL, B, exec, ~/.config/hypr/hyprland/scripts/focus_and_lauch_app.sh browser # [hidden]
+#/# bind = Hold_Space, C,, # Discord
+bind = Alt+SHIFT+CTRL, D, exec, ~/.config/hypr/hyprland/scripts/focus_and_lauch_app.sh discord # [hidden]
+#/# bind = Hold_Space, E,, # File manager
+bind = Alt+SHIFT+CTRL, E, exec, ~/.config/hypr/hyprland/scripts/focus_and_lauch_app.sh files # [hidden]
+#/# bind = Hold_Space, W,, # Scratchpad Spotify
+bind = Alt+SHIFT+CTRL, T,exec,pypr toggle spotify # [hidden]
+bind = Super, R,exec,pypr toggle yazi # Scratchpad Yazi
 
 # Cursed stuff
 ## Make window not amogus large
