--- a/dots/.config/hypr/hyprland/keybinds.conf
+++ b/dots/.config/hypr/hyprland/keybinds.conf
@@ -118,7 +118,7 @@ bind = Super+Shift, Space, togglefloating, # Float/Tile
 bind = Super+Shift, T, fullscreen, 1 # Maximize
 bind = Super, T, fullscreen, 0 # Fullscreen
 bind = Super+Alt, F, fullscreenstate, 0 3 # Fullscreen spoof
-bind = Super+Shift, P, pin # Pin
+bind = Super, P, pin # Pin
 
 #/# bind = Super+Shift, Hash,, # Send and Follow to workspace # (1, 2, 3,...)
 # We use raw keycodes because some keyboard layouts register number keys as different chars. The codes can be verified with `wev`
