--- a/dots/.config/hypr/hyprland/rules.conf
+++ b/dots/.config/hypr/hyprland/rules.conf
@@ -27,7 +27,7 @@ windowrule = tag +file-manager, class:^([Tt]hunar|org.gnome.Nautilus|[Pp]cmanfm-
 windowrule = tag +file-manager, class:^(org.kde.dolphin)$
 
 # multimedia-video tags
-windowrule = tag +multimedia_video, class:^([Mm]pv|vlc)$
+windowrule = tag +multimedia_video, class:^([Mm]pv|vlc|com.stremio.stremio)$
 
 # windowrule move to workspace
 windowrule = workspace 1, tag:browser*
