Adding wezterm and some tweaks

--- a/dots/.config/hypr/hyprland/keybinds.conf
+++ b/dots/.config/hypr/hyprland/keybinds.conf
@@ -72,9 +72,8 @@ bind = Super+Shift, T,exec, qs -c $qsConfig ipc call TEST_ALIVE || pidof slurp |
 # Color picker
 bindd = Super+Shift, C, Color picker, exec, hyprpicker -a # Pick color (Hex) >> clipboard
 # Fullscreen screenshot
-bindl = ,Print,exec,grim - | wl-copy # Screenshot >> clipboard
-bindln = Ctrl,Print, exec, mkdir -p $(xdg-user-dir PICTURES)/Screenshots && grim $(xdg-user-dir PICTURES)/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png # Screenshot >> clipboard & file (file)
-bindln = Ctrl,Print,exec,grim - | wl-copy # [hidden] Screenshot >> clipboard & file (clipboard)
+bindld = ,Print, Screenshot >> clipboard ,exec,grim - | wl-copy # Screenshot >> clipboard
+bindld = Ctrl,Print, Screenshot >> clipboard & save, exec, mkdir -p $(xdg-user-dir PICTURES)/Screenshots && grim $(xdg-user-dir PICTURES)/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png # Screenshot >> clipboard & file
 # Recording stuff
 bindl = Super+Shift, R, global, quickshell:regionRecord # Record region (no sound)
 bindl = Super+Shift, R, exec, qs -c $qsConfig ipc call TEST_ALIVE || ~/.config/quickshell/$qsConfig/scripts/videos/record.sh # [hidden] Record region (no sound) (fallback)
@@ -300,8 +299,8 @@ bind = Ctrl+Super+Shift+Alt, W, exec, ~/.config/hypr/hyprland/scripts/launch_fir
 bind = Ctrl+Super, V, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "pavucontrol-qt" "pavucontrol" # Volume mixer
 bind = Super, I, exec, XDG_CURRENT_DESKTOP=gnome ~/.config/hypr/hyprland/scripts/launch_first_available.sh "qs -p ~/.config/quickshell/$qsConfig/settings.qml" "systemsettings" "gnome-control-center" "better-control" # Settings app
 bind = Ctrl+Shift, Escape, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "gnome-system-monitor" "plasma-systemmonitor --page-name Processes" "command -v btop && kitty -1 fish -c btop" # Task manager
-#/# bind = Hold_Space, W,, # WezTerm(p)
-bind = Alt+SHIFT+CTRL, W, exec, export WEZTERM_WORKSPACE=Home_P && wezterm start --always-new-process # [hidden]
+#/# bind = Hold_Space, W,, # WezTerm(P)
+bind = Alt+SHIFT+CTRL, W, exec, ~/.config/hypr/hyprland/scripts/focus_and_lauch_app.sh wezterm # [hidden]
 #/# bind = Hold_Space, B,, # Browser
 bind = Alt+SHIFT+CTRL, B, exec, ~/.config/hypr/hyprland/scripts/focus_and_lauch_app.sh browser # [hidden]
 #/# bind = Hold_Space, C,, # Discord
