--- a/dots/.config/hypr/hyprland/rules.conf
+++ b/dots/.config/hypr/hyprland/rules.conf
@@ -9,6 +9,9 @@ windowrule = tag +browser, class:^(zen-alpha|zen)$
 # terminal tags
 windowrule = tag +terminal, class:^(org.wezfurlong.wezterm|Alacritty|kitty|kitty-dropterm)$
 
+# terminal workspaces tags
+windowrule = tag +terminalworkspaces, class:^(WezTerm\(P\)|WezTerm\(T\))$
+
 # spotify tags
 windowrule = tag +spotify, class:^([Ss]potify)$
 
@@ -32,10 +35,11 @@ windowrule = tag +multimedia_video, class:^([Mm]pv|vlc|com.stremio.stremio)$
 # windowrule move to workspace
 windowrule = workspace 1, tag:browser*
 # windowrule = workspace 2, tag:terminal*
+windowrule = workspace 2, tag:terminalworkspaces*
 windowrule = workspace 3, tag:projects*
-windowrule = workspace 6, tag:im*
-windowrule = workspace 7, tag:file-manager*
-windowrule = workspace 8, tag:multimedia_video*
+windowrule = workspace 4, tag:im*
+windowrule = workspace 5, tag:file-manager*
+windowrule = workspace 6, tag:multimedia_video*
 
 # OPACITY
 # windowrule = opacity 0.9 0.7, tag:browser*
