fix spotify comment

--- a/dots/.config/hypr/hyprland/keybinds.conf
+++ b/dots/.config/hypr/hyprland/keybinds.conf
@@ -307,7 +307,7 @@ bind = Alt+SHIFT+CTRL, B, exec, ~/.config/hypr/hyprland/scripts/focus_and_lauch_
 bind = Alt+SHIFT+CTRL, D, exec, ~/.config/hypr/hyprland/scripts/focus_and_lauch_app.sh discord # [hidden]
 #/# bind = Hold_Space, E,, # File manager
 bind = Alt+SHIFT+CTRL, E, exec, ~/.config/hypr/hyprland/scripts/focus_and_lauch_app.sh files # [hidden]
-#/# bind = Hold_Space, W,, # Scratchpad Spotify
+#/# bind = Hold_Space, S,, # Scratchpad Spotify
 bind = Alt+SHIFT+CTRL, T,exec,pypr toggle spotify # [hidden]
 bind = Super, R,exec,pypr toggle yazi # Scratchpad Yazi
 
