fix: keybinds and update pyprland and starship

--- a/dots/.config/hypr/hyprland/keybinds.conf
+++ b/dots/.config/hypr/hyprland/keybinds.conf
@@ -72,8 +72,9 @@ bind = Super+Shift, T,exec, qs -c $qsConfig ipc call TEST_ALIVE || pidof slurp |
 # Color picker
 bindd = Super+Shift, C, Color picker, exec, hyprpicker -a # Pick color (Hex) >> clipboard
 # Fullscreen screenshot
-bindld = ,Print, Screenshot >> clipboard ,exec,grim - | wl-copy # Screenshot >> clipboard
-bindld = Ctrl,Print, Screenshot >> clipboard & save, exec, mkdir -p $(xdg-user-dir PICTURES)/Screenshots && grim $(xdg-user-dir PICTURES)/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png # Screenshot >> clipboard & file
+bindl = ,Print,exec,grim - | wl-copy # Screenshot >> clipboard
+bindln = Ctrl,Print, exec, mkdir -p $(xdg-user-dir PICTURES)/Screenshots && grim $(xdg-user-dir PICTURES)/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png # Screenshot >> clipboard & file (file)
+bindln = Ctrl,Print,exec,grim - | wl-copy # [hidden] Screenshot >> clipboard & file (clipboard)
 # Recording stuff
 bindl = Super+Shift, R, global, quickshell:regionRecord # Record region (no sound)
 bindl = Super+Shift, R, exec, qs -c $qsConfig ipc call TEST_ALIVE || ~/.config/quickshell/$qsConfig/scripts/videos/record.sh # [hidden] Record region (no sound) (fallback)
@@ -114,7 +115,7 @@ binde = Super, Semicolon, splitratio, -0.1 # [hidden]
 binde = Super, Apostrophe, splitratio, +0.1 # [hidden]
 # Positioning mode
 bind = Super+Shift, Space, togglefloating, # Float/Tile
-bind = Super+Shift, T, fullscreen, 1 # Maximize
+bind = Super+Shift+Ctrl, T, fullscreen, 1 # Maximize
 bind = Super, T, fullscreen, 0 # Fullscreen
 bind = Super+Alt, F, fullscreenstate, 0 3 # Fullscreen spoof
 bind = Super, P, pin # Pin
@@ -291,7 +292,7 @@ bindel = Super, down, exec, sh -c 'if playerctl -l | grep -q spotify_player; the
 bind = Super, Return, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "${TERMINAL}" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # Terminal
 # bind = Super, T, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh  "${TERMINAL}" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # [hidden] (terminal) (alt)
 # bind = Ctrl+Alt, T, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "${TERMINAL}" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # [hidden] (terminal) (for Ubuntu people)
-bind = Super, E, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "dolphin" "nautilus" "nemo" "thunar" "${TERMINAL}" "wezterm start -- zsh -c yazi" # [hidden]
+bind = Super, E, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "dolphin" "nautilus" "nemo" "thunar" "${TERMINAL}" "wezterm start -- zsh -c yazi" # File manager
 # bind = Super, B, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "google-chrome-stable" "zen-browser" "firefox" "brave" "chromium" "microsoft-edge-stable" "opera" "librewolf" # Browser
 # bind = Super, C, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "code" "codium" "cursor" "zed" "zedit" "zeditor" "kate" "gnome-text-editor" "emacs" "command -v nvim && kitty -1 nvim" "command -v micro && kitty -1 micro" # Code editor
 bind = Ctrl+Super+Shift+Alt, W, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "wps" "onlyoffice-desktopeditors" "libreoffice" # Office software
@@ -309,6 +310,7 @@ bind = Alt+SHIFT+CTRL, D, exec, ~/.config/hypr/hyprland/scripts/focus_and_lauch_
 bind = Alt+SHIFT+CTRL, E, exec, ~/.config/hypr/hyprland/scripts/focus_and_lauch_app.sh files # [hidden]
 #/# bind = Hold_Space, S,, # Scratchpad Spotify
 bind = Alt+SHIFT+CTRL, T,exec,pypr toggle spotify # [hidden]
+bind = Super, W,exec,pypr toggle term # Scratchpad Terminal
 bind = Super, R,exec,pypr toggle yazi # Scratchpad Yazi
 
 # Cursed stuff
