Slowing trackpoint sens

--- a/dots/.config/hypr/hyprland/general.conf
+++ b/dots/.config/hypr/hyprland/general.conf
@@ -136,6 +136,12 @@ input {
     }
 }
 
+device {
+    name = dell0814:01-044e:121f-mouse
+    sensitivity = -0.6
+    accel_profile = flat
+}
+
 misc {
     disable_hyprland_logo = true
     disable_splash_rendering = true
