--- a/dots/.config/hypr/hyprland/keybinds.conf
+++ b/dots/.config/hypr/hyprland/keybinds.conf
@@ -284,9 +284,9 @@ bindl= Super+Shift+Ctrl, P, exec, playerctl play-pause # Play/pause media
 bindl= ,XF86AudioPlay, exec, playerctl play-pause # [hidden]
 bindl= ,XF86AudioPause, exec, playerctl play-pause # [hidden]
 #/# bind = Super, ↑,, # Increase spotify volume
-bindel = Super, up, exec, sh -c 'if playerctl -l | grep -q spotify_player; then /home/vimdiesel/.cargo/bin/spotify_player playback volume --offset 5; else playerctl --player=spotify volume $(echo "$(playerctl --player=spotify volume)+0.05" | bc); fi' # [hidden]
+bindel = Super, up, exec, sh -c 'if playerctl -l | grep -q spotify_player; then spotify_player playback volume --offset 5; else playerctl --player=spotify volume $(echo "$(playerctl --player=spotify volume)+0.05" | bc); fi' # [hidden]
 #/# bind = Super, ↓,, # Decrease spotify volume
-bindel = Super, down, exec, sh -c 'if playerctl -l | grep -q spotify_player; then /home/vimdiesel/.cargo/bin/spotify_player playback volume --offset -- -5; else playerctl --player=spotify volume $(echo "$(playerctl --player=spotify volume)-0.05" | bc); fi' # [hidden]
+bindel = Super, down, exec, sh -c 'if playerctl -l | grep -q spotify_player; then spotify_player playback volume --offset -- -5; else playerctl --player=spotify volume $(echo "$(playerctl --player=spotify volume)-0.05" | bc); fi' # [hidden]
 
 ##! Apps
 bind = Super, Return, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "${TERMINAL}" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # Terminal
