fix: terminals transparent and terminal workspaces transparent with not blur

--- a/dots/.config/hypr/hyprland/rules.conf
+++ b/dots/.config/hypr/hyprland/rules.conf
@@ -11,6 +11,7 @@ windowrule = tag +terminal, class:^(org.wezfurlong.wezterm|Alacritty|kitty|kitty
 
 # terminal workspaces tags
 windowrule = tag +terminalworkspaces, class:^(WezTerm\(P\)|WezTerm\(T\))$
+windowrulev2 = noblur, tag:terminalworkspaces*
 
 # spotify tags
 windowrule = tag +spotify, class:^([Ss]potify)$
@@ -43,7 +44,7 @@ windowrule = workspace 6, tag:multimedia_video*
 
 # OPACITY
 # windowrule = opacity 0.9 0.7, tag:browser*
-# windowrule = opacity 0.9 0.8, tag:terminal*
+windowrule = opacity 0.9 0.8, tag:terminal*
 windowrule = opacity 0.9 0.8, tag:projects*
 windowrule = opacity 0.8 0.8, tag:spotify*
 windowrule = opacity 0.9 0.86, tag:im*
