--- a/dots/.config/hypr/hyprland/rules.conf
+++ b/dots/.config/hypr/hyprland/rules.conf
@@ -2,55 +2,55 @@
 
 # windowrule - tags - add apps under appropriate tag to use the same settings
 # browser tags
-windowrule = tag +browser, class:^([Ff]irefox|org.mozilla.firefox|[Ff]irefox-esr|[Ff]irefox-bin)$
-windowrule = tag +browser, class:^([Tt]horium-browser|[Cc]achy-browser)$
-windowrule = tag +browser, class:^(zen-alpha|zen)$
+windowrule = tag +browser, match:class ^([Ff]irefox|org.mozilla.firefox|[Ff]irefox-esr|[Ff]irefox-bin)$
+windowrule = tag +browser, match:class ^([Tt]horium-browser|[Cc]achy-browser)$
+windowrule = tag +browser, match:class ^(zen-alpha|zen)$
 
 # terminal tags
-windowrule = tag +terminal, class:^(org.wezfurlong.wezterm|Alacritty|kitty|kitty-dropterm)$
+windowrule = tag +terminal, match:class ^(org.wezfurlong.wezterm|Alacritty|kitty|kitty-dropterm)$
 
 # terminal workspaces tags
-windowrule = tag +terminalworkspaces, class:^(WezTerm\(P\)|WezTerm\(T\))$
-windowrulev2 = noblur, tag:terminalworkspaces*
+windowrule = tag +terminalworkspaces, match:class ^(WezTerm\(P\)|WezTerm\(T\))$
+windowrule = noblur, match:tag terminalworkspaces
 
 # spotify tags
-windowrule = tag +spotify, class:^([Ss]potify)$
+windowrule = tag +spotify, match:class ^([Ss]potify)$
 
 # project tags
-windowrule = tag +projects, class:^(codium|codium-url-handler|VSCodium)$
-windowrule = tag +projects, class:^(VSCode|code-url-handler)$
-windowrule = tag +projects, class:^(jetbrains-.+)$ # JetBrains IDEs
+windowrule = tag +projects, match:class ^(codium|codium-url-handler|VSCodium)$
+windowrule = tag +projects, match:class ^(VSCode|code-url-handler)$
+windowrule = tag +projects, match:class ^(jetbrains-.+)$ # JetBrains IDEs
 
 # IM tags
-windowrule = tag +im, class:^([Dd]iscord|[Ww]ebCord|[Vv]esktop)$
-windowrule = tag +im, class:^([Ww]hatsapp-for-linux)$
-windowrule = tag +im, class:^(org.telegram.desktop|io.github.tdesktop_x64.TDesktop)$
+windowrule = tag +im, match:class ^([Dd]iscord|[Ww]ebCord|[Vv]esktop)$
+windowrule = tag +im, match:class ^([Ww]hatsapp-for-linux)$
+windowrule = tag +im, match:class ^(org.telegram.desktop|io.github.tdesktop_x64.TDesktop)$
 
 # file-manager tags
-windowrule = tag +file-manager, class:^([Tt]hunar|org.gnome.Nautilus|[Pp]cmanfm-qt)$
-windowrule = tag +file-manager, class:^(org.kde.dolphin)$
+windowrule = tag +file-manager, match:class ^([Tt]hunar|org.gnome.Nautilus|[Pp]cmanfm-qt)$
+windowrule = tag +file-manager, match:class ^(org.kde.dolphin)$
 
 # multimedia-video tags
-windowrule = tag +multimedia_video, class:^([Mm]pv|vlc|com.stremio.stremio)$
+windowrule = tag +multimedia_video, match:class ^([Mm]pv|vlc|com.stremio.stremio)$
 
 # windowrule move to workspace
-windowrule = workspace 1, tag:browser*
-# windowrule = workspace 2, tag:terminal*
-windowrule = workspace 2, tag:terminalworkspaces*
-windowrule = workspace 3, tag:projects*
-windowrule = workspace 4, tag:im*
-windowrule = workspace 5, tag:file-manager*
-windowrule = workspace 6, tag:multimedia_video*
+windowrule = workspace 1, match:tag browser
+# windowrule = workspace 2, match:tag terminal
+windowrule = workspace 2, match:tag terminalworkspaces
+windowrule = workspace 3, match:tag projects
+windowrule = workspace 4, match:tag im
+windowrule = workspace 5, match:tag file-manager
+windowrule = workspace 6, match:tag multimedia_video
 
 # OPACITY
-# windowrule = opacity 0.9 0.7, tag:browser*
-windowrule = opacity 0.9 0.8, tag:terminal*
-windowrule = opacity 0.9 0.8, tag:projects*
-windowrule = opacity 0.8 0.8, tag:spotify*
-windowrule = opacity 0.9 0.86, tag:im*
-windowrule = opacity 0.9 0.8, tag:file-manager*
-windowrule = opacity 0.94 0.86, tag:multimedia*
-windowrule = opacity 0.95 0.75, title:^(Picture-in-Picture)$
+# windowrule = opacity 0.9 0.7, match:tag browser
+windowrule = opacity 0.9 0.8, match:tag terminal
+windowrule = opacity 0.9 0.8, match:tag projects
+windowrule = opacity 0.8 0.8, match:tag spotify
+windowrule = opacity 0.9 0.86, match:tag im
+windowrule = opacity 0.9 0.8, match:tag file-manager
+windowrule = opacity 0.94 0.86, match:tag multimedia
+windowrule = opacity 0.95 0.75, match:tag ^(Picture-in-Picture)$
 
 
 # Uncomment to apply global transparency to all windows:
