fix window rules

--- a/dots/.config/hypr/hyprland/rules.conf
+++ b/dots/.config/hypr/hyprland/rules.conf
@@ -11,7 +11,7 @@ windowrule = tag +terminal, match:class ^(org.wezfurlong.wezterm|Alacritty|kitty
 
 # terminal workspaces tags
 windowrule = tag +terminalworkspaces, match:class ^(WezTerm\(P\)|WezTerm\(T\))$
-windowrule = noblur, match:tag terminalworkspaces
+windowrule = match:tag terminalworkspaces, no_blur on
 
 # spotify tags
 windowrule = tag +spotify, match:class ^([Ss]potify)$
@@ -60,7 +60,7 @@ windowrule = opacity 0.95 0.75, match:tag ^(Picture-in-Picture)$
 windowrule = match:class ^()$, match:title ^()$, no_blur on
 
 # Disable blur for every window
-windowrule = match:class .*, no_blur on
+# windowrule = match:class .*, no_blur on
 
 # Floating
 windowrule = match:title ^(Open File)(.*)$, center on
