--- a/dots/.config/hypr/hyprland/execs.conf
+++ b/dots/.config/hypr/hyprland/execs.conf
@@ -12,6 +12,9 @@ exec-once = hypridle
 exec-once = dbus-update-activation-environment --all
 exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Some fix idk
 
+# Digital Vibrance
+exec = hyprshade on my-vibrance
+
 # Audio
 exec-once = easyeffects --hide-window --service-mode
 
