Adding my mouse config & steam workspace rules

--- a/dots/.config/hypr/hyprland/general.conf
+++ b/dots/.config/hypr/hyprland/general.conf
@@ -142,6 +142,12 @@ device {
     accel_profile = flat
 }
 
+device {
+    name = razer-razer-viper-mini
+    sensitivity = 0
+    accel_profile = flat
+}
+
 misc {
     disable_hyprland_logo = true
     disable_splash_rendering = true
