--- a/dots/.config/hypr/hyprland/rules.conf
+++ b/dots/.config/hypr/hyprland/rules.conf
@@ -1,22 +1,22 @@
 # ######## Window rules ########
 
 # windowrule - tags - add apps under appropriate tag to use the same settings
-# browser tags
+# Browser tags
 windowrule = tag +browser, match:class ^([Ff]irefox|org.mozilla.firefox|[Ff]irefox-esr|[Ff]irefox-bin)$
 windowrule = tag +browser, match:class ^([Tt]horium-browser|[Cc]achy-browser)$
 windowrule = tag +browser, match:class ^(zen-alpha|zen)$
 
-# terminal tags
+# Terminal tags
 windowrule = tag +terminal, match:class ^(org.wezfurlong.wezterm|Alacritty|kitty|kitty-dropterm)$
 
-# terminal workspaces tags
+# Terminal workspaces tags
 windowrule = tag +terminalworkspaces, match:class ^(WezTerm\(P\)|WezTerm\(T\))$
 windowrule = match:tag terminalworkspaces, no_blur on
 
-# spotify tags
+# Spotify tags
 windowrule = tag +spotify, match:class ^([Ss]potify)$
 
-# project tags
+# Project tags
 windowrule = tag +projects, match:class ^(codium|codium-url-handler|VSCodium)$
 windowrule = tag +projects, match:class ^(VSCode|code-url-handler)$
 windowrule = tag +projects, match:class ^(jetbrains-.+)$ # JetBrains IDEs
@@ -26,14 +26,17 @@ windowrule = tag +im, match:class ^([Dd]iscord|[Ww]ebCord|[Vv]esktop)$
 windowrule = tag +im, match:class ^([Ww]hatsapp-for-linux)$
 windowrule = tag +im, match:class ^(org.telegram.desktop|io.github.tdesktop_x64.TDesktop)$
 
-# file-manager tags
+# File-manager tags
 windowrule = tag +file-manager, match:class ^([Tt]hunar|org.gnome.Nautilus|[Pp]cmanfm-qt)$
 windowrule = tag +file-manager, match:class ^(org.kde.dolphin)$
 
-# multimedia-video tags
+# Multimedia-video tags
 windowrule = tag +multimedia_video, match:class ^([Mm]pv|vlc|com.stremio.stremio)$
 
-# windowrule move to workspace
+# Games
+windowrule = tag +games, match:class ^(steam)$
+
+# Windowrule move to workspace
 windowrule = workspace 1, match:tag browser
 # windowrule = workspace 2, match:tag terminal
 windowrule = workspace 2, match:tag terminalworkspaces
@@ -41,6 +44,7 @@ windowrule = workspace 3, match:tag projects
 windowrule = workspace 4, match:tag im
 windowrule = workspace 5, match:tag file-manager
 windowrule = workspace 6, match:tag multimedia_video
+windowrule = workspace 7, match:tag games
 
 # OPACITY
 # windowrule = opacity 0.9 0.7, match:tag browser
