Adding Equibop windows rule

--- a/dots/.config/hypr/hyprland/rules.conf
+++ b/dots/.config/hypr/hyprland/rules.conf
@@ -22,7 +22,7 @@ windowrule = tag +projects, match:class ^(VSCode|code-url-handler)$
 windowrule = tag +projects, match:class ^(jetbrains-.+)$ # JetBrains IDEs
 
 # IM tags
-windowrule = tag +im, match:class ^([Dd]iscord|[Ww]ebCord|[Vv]esktop)$
+windowrule = tag +im, match:class ^([Dd]iscord|[Ww]ebCord|[Vv]esktop|[Ee]quibop)$
 windowrule = tag +im, match:class ^([Ww]hatsapp-for-linux)$
 windowrule = tag +im, match:class ^(org.telegram.desktop|io.github.tdesktop_x64.TDesktop)$
 
