fix(keybinds): use playerctl instead of rmpc

--- a/dots/.config/hypr/hyprland/keybinds.conf
+++ b/dots/.config/hypr/hyprland/keybinds.conf
@@ -284,10 +284,10 @@ bindl= Super+Shift+Ctrl, P, exec, rmpc togglepause # Play/pause media
 bindl= ,XF86AudioPlay, exec, playerctl play-pause # [hidden]
 bindl= ,XF86AudioPause, exec, playerctl play-pause # [hidden]
 #/# bind = Super, ↑,, # Increase spotify volume
-bindel = Super, up, exec, rmpc volume +5
+bindel = Super, up, exec, playerctl --player=mpd volume 0.05+
 # bindel = Super, up, exec, sh -c 'if playerctl -l | grep -q spotify_player; then spotify_player playback volume --offset 5; else playerctl --player=spotify volume $(echo "$(playerctl --player=spotify volume)+0.05" | bc); fi' # [hidden]
 #/# bind = Super, ↓,, # Decrease spotify volume
-bindel = Super, down, exec, rmpc volume -5
+bindel = Super, down, exec, playerctl --player=mpd volume 0.05-
 # bindel = Super, down, exec, sh -c 'if playerctl -l | grep -q spotify_player; then spotify_player playback volume --offset -- -5; else playerctl --player=spotify volume $(echo "$(playerctl --player=spotify volume)-0.05" | bc); fi' # [hidden]
 
 ##! Apps
