--- a/dots/.config/hypr/hyprland/rules.conf
+++ b/dots/.config/hypr/hyprland/rules.conf
@@ -88,9 +88,9 @@ windowrule = match:title ^(.*)(wants to open)$, center on
 windowrule = match:title ^(.*)(wants to open)$, float on
 windowrule = match:class ^(blueberry\.py)$, float on
 windowrule = match:class ^(guifetch)$  , float on # FlafyDev/guifetch
-windowrule = match:class ^(pavucontrol)$, float on
-windowrule = match:class ^(pavucontrol)$, size (monitor_w*.45) (monitor_h*.45)
-windowrule = match:class ^(pavucontrol)$, center on
+windowrule = match:class ^(pavucontrol-qt)$, float on
+windowrule = match:class ^(pavucontrol-qt)$, size (monitor_w*.45) (monitor_h*.45)
+windowrule = match:class ^(pavucontrol-qt)$, center on
 windowrule = match:class ^(org.pulseaudio.pavucontrol)$, float on
 windowrule = match:class ^(org.pulseaudio.pavucontrol)$, size (monitor_w*.45) (monitor_h*.45)
 windowrule = match:class ^(org.pulseaudio.pavucontrol)$, center on
