changing the keybind for zapping a window

--- a/dots/.config/hypr/hyprland/keybinds.conf
+++ b/dots/.config/hypr/hyprland/keybinds.conf
@@ -106,7 +106,7 @@ binded = Super+Shift, K, Move activewindow to the right,exec, $moveactivewindow 
 binded = Super+Shift, J, Move activewindow to the right,exec, $moveactivewindow 0 30 || hyprctl dispatch movewindow d # [hidden]
 bind = Alt, F4, killactive, # [hidden] Close (Windows)
 bind = Super, C, killactive, # Close
-bind = Super+Shift+Alt, C, exec, hyprctl kill # Forcefully zap a window
+bind = Super+Shift+Ctrl, C, exec, hyprctl kill # Forcefully zap a window
 
 
 # Window split ratio
