fixing and adding mpd playlists and state

--- a/dots/.config/mpd/mpd.conf
+++ b/dots/.config/mpd/mpd.conf
@@ -19,7 +19,7 @@ music_directory "/home/vimdiesel/Music"
 # format. This setting defaults to playlist saving being disabled.
 #
 #playlist_directory		"$XDG_CONFIG_HOME/mpd/playlists"
-playlist_directory "/home/vimdiesel/.mpd/playlists"
+playlist_directory "/home/vimdiesel/.config/mpd/playlists"
 #
 # This setting sets the location of the MPD database. This file is used to
 # load the database at server start up and store the database while the
@@ -56,7 +56,7 @@ log_file "/home/vimdiesel/.mpd/log"
 # state will be reset on server start up.
 #
 #state_file			"$XDG_RUNTIME_DIR/mpd/state"
-# state_file "~/.mpd/state"
+state_file "/home/vimdiesel/.mpd/state"
 #
 # The location of the sticker database.  This is a database which
 # manages dynamic information attached to songs.
@@ -235,8 +235,8 @@ audio_output {
 	type "pipewire"
 	name "pipewire"
 	# device "hw:0,0"	# optional
-	mixer_type "software"	# optional
-	mixer_device "default"	# optional
+	# mixer_type "software"	# optional
+	# mixer_device "default"	# optional
 	# mixer_control "PCM"		# optional
 	# mixer_index "0"		# optional
 }
